[gd_scene load_steps=3 format=3 uid="uid://cn8tnkricq2cr"]

[ext_resource type="Script" uid="uid://cy0yx3lfbsoso" path="res://scripts/ui/HabitantSelection.gd" id="1_yfolk"]
[ext_resource type="StyleBox" uid="uid://bgsav0hcj27qw" path="res://Assets/UI/MenuMainPanel.tres" id="2_020bc"]

[node name="SelectHabitant" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_yfolk")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("2_020bc")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Selection" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Selection"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/Selection/VBoxContainer"]
layout_mode = 2

[node name="AddHabButton" type="Button" parent="HBoxContainer/Selection/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
text = "+"

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/Selection/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HabitantList" type="ItemList" parent="HBoxContainer/Selection/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="View" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="HBoxContainer/Selection/VBoxContainer/HBoxContainer/AddHabButton" to="." method="add_habitant_button_pressed"]
[connection signal="item_selected" from="HBoxContainer/Selection/VBoxContainer/ScrollContainer/HabitantList" to="." method="habitant_selected"]
